--- a/signup.css
+++ b/signup.css
@@ -24,7 +24,7 @@
 }
 
 .btn {
-  border-radius: 9999px;
+  border-radius: 9999999999999999999999999999999999999999999999999999999999px;
   padding: .6rem 1.2rem;
   font-weight: 600;
 }
